--- a/estilo/style.css
+++ b/estilo/style.css
@@ -110,6 +110,8 @@ main h2 {
     font-weight: normal;
     background-image: linear-gradient(to right, var(--cor1), transparent);
     text-indent: 8px;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
 }
 
 main p {
